@@ -53,6 +53,21 @@ else
 fi
 AC_SUBST(with_gvfs_source)
 
+
+dnl *** awkward check for gvfs version
+
+AC_ARG_WITH(gvfs-source-version, [  --with-gvfs-source-version=VERSION     Version of the GVFS source tree (default 1.2).],
+            with_gvfs_source_version="$withval", with_gvfs_source_version="1.2")
+AC_MSG_CHECKING([gvfs minor version])
+
+#gvfs_minor_ver=`echo "$with_gvfs_source_version" | sed -e 's/^.*[0-9]\{1,\}\.\([0-9]\{1,\}\).*$/\1/'`
+gvfs_minor_ver=`echo "$with_gvfs_source_version" | sed -e 's/^.*@<:@0-9@:>@\{1,\}\.\(@<:@0-9@:>@\{1,\}\).*$/\1/'`
+
+AC_MSG_RESULT([$gvfs_minor_ver])
+AM_CONDITIONAL(GVFS_VERSION_1_2, test "$gvfs_minor_ver" -ge 2 )
+
+
+
 AC_ARG_ENABLE(update-mime-database,
         AC_HELP_STRING([--disable-update-mime-database],
        [do not run the update-mime-database utility (mostly useful for package maintainers) ]))
