@@ -1,0 +1,1 @@
+#error You must set --with-gvfs-source in ./configure
